...
            OutlinedTextField(
                value = currentDescription,
                onValueChange = {
                    currentDescription = it
                    onQueryChanged(it.text)
                },
                label = { Text("Search or enter new merchant") },
                modifier =
                    Modifier
                        .fillMaxWidth()
                        .testTag("description_text_field")
                        .focusRequester(focusRequester),
                singleLine = true,
...
